--- a/manifest.yml
+++ b/manifest.yml
@@ -2,5 +2,6 @@
 applications:
 - name: pcc-spring
   path: ./target/springboot-pcc-demo-0.0.1-SNAPSHOT.jar
+  buildpack: java_buildpack_offline
   services:
   - cloudcache
