--- a/pom.xml
+++ b/pom.xml
@@ -25,20 +25,14 @@
 	</properties>
 
 	<dependencies>
-		<!--  Geode -->
+		<!-- Spring Data Gemfire -->
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-gemfire</artifactId>
-			<version>1.9.4.RELEASE</version>
+			<artifactId>spring-data-geode</artifactId>
+			<version>1.0.0.INCUBATING-RELEASE</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.geode</groupId>
-			<artifactId>geode-core</artifactId>
-			<version>1.2.0</version>
-		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
