--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,7 @@
 ---
 applications:
 - name: pcc-spring
+  random-route: true
   path: ./target/springboot-pcc-demo-0.0.1-SNAPSHOT.jar
   buildpack: java_buildpack_offline
   services:
